--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="productos">
             <h2>Ropa de Segunda Mano</h2>
             <div class="producto">
-                <img src="/tipoPoloM.png" alt="Descripción de la prenda">
+                <img src="../tipoPoloM.png" alt="Descripción de la prenda">
                 <h3>Camisa Para Hombre talla M</h3>
                 <p>Camisa Tipo Polo talla M para hombre</p>
                 <p>Color Azul ,algodon 100%</p>
