--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button>Comprar</button>
             </div>
             <div class="producto">
-                <img src="/VestidoDama.png" alt="Descripción de la prenda">
+                <img src="VestidoDama.png" alt="Descripción de la prenda">
                 <h3>Vestido para dama Verano 2021</h3>
                 <p>Vestido Floral para dama </p>
                 <p>1.54 cm de largo ,talla S </p>
