--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atico Vintage</title>
+    <title>Ático Vintage</title>
     <link rel="stylesheet" href="style.css"> <!-- Vincula tu archivo CSS aquí -->
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <div  class="logo" >
             <img src="logoSB.png" alt="logo" width="200px" height="auto">
-            <h1>Atico Vintage</h1>
+            <h1>Ático Vintage</h1>
         </div>
         <nav>
             <ul>
@@ -32,8 +32,8 @@
                 <img src="tipoPoloM.png" alt="Descripción de la prenda">
                 <h3>Camisa Para Hombre talla M</h3>
                 <p>Camisa Tipo Polo talla M para hombre</p>
-                <p>Color Azul ,algodon 100%</p>
-                <p>Precio: $3.40</p>
+                <p>Color Azúl ,algodón 100%</p>
+                <p>Precio: ¢1500</p>
                 <button>Comprar</button>
             </div>
             <div class="producto">
@@ -41,7 +41,7 @@
                 <h3>Vestido para dama Verano 2021</h3>
                 <p>Vestido Floral para dama </p>
                 <p>1.54 cm de largo ,talla S </p>
-                <p>Precio: $4.12</p>
+                <p>Precio: ¢3600</p>
                 <button>Comprar</button>
             </div>
             <!-- Agrega más productos según sea necesario -->
@@ -80,7 +80,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>&copy; 2024 Atico Vintage. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ático Vintage. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
