--- a/miscompras.html
+++ b/miscompras.html
@@ -22,20 +22,20 @@
                 <h3>Compra #1234</h3>
                 <p>Producto: Camiseta Vintage</p>
                 <p>Fecha: 12/08/2024</p>
-                <p>Total: $25.00</p>
+                <p>Total: ¢2500</p>
             </div>
             <div class="compra">
                 <h3>Compra #1235</h3>
                 <p>Producto: Pantalones Retro</p>
                 <p>Fecha: 14/08/2024</p>
-                <p>Total: $40.00</p>
+                <p>Total: ¢4000</p>
             </div>
             <!-- Agrega más compras según sea necesario -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Atico Vintage. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ático Vintage. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
