--- a/miscompras.html
+++ b/miscompras.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-            <h1>Atico Vintage</h1>
+            <h1>Ático Vintage</h1>
             </a>
         </div>
     </header>
