--- a/envios.html
+++ b/envios.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-             <h1>Atico Vintage</h1>
+             <h1>Ático Vintage</h1>
             </a>
         </div>
 
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Atico Vintage. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ático Vintage. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
