--- a/carrito.html
+++ b/carrito.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <h1>Atico Vintage</h1>
+                <h1>Ático Vintage</h1>
             </a>
         </div>
     </header>
@@ -22,23 +22,23 @@
             <div class="producto-carrito">
                 <h3>Camiseta Vintage</h3>
                 <p>Cantidad: 1</p>
-                <p>Precio: $25.00</p>
+                <p>Precio: ¢2500.00</p>
                 <button>Eliminar</button>
             </div>
             <div class="producto-carrito">
                 <h3>Pantalones Retro</h3>
                 <p>Cantidad: 1</p>
-                <p>Precio: $40.00</p>
+                <p>Precio: ¢4000.00</p>
                 <button>Eliminar</button>
             </div>
             <!-- Más productos en el carrito -->
-            <h3>Total: $65.00</h3>
+            <h3>Total: ¢6500.00</h3>
             <button>Pagar</button>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Atico Vintage. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ático Vintage. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
