--- a/carrito.html
+++ b/carrito.html
@@ -33,7 +33,8 @@
             </div>
             <!-- Más productos en el carrito -->
             <h3>Total: ¢6500.00</h3>
-            <button>Pagar</button>
+            <a href="pagos.html" class="button">Pagar</a>
+
         </section>
     </main>
 
