--- a/pagos.html
+++ b/pagos.html
@@ -12,7 +12,7 @@
             <div class="card" id="card">
                 <div class="front">
                     <div class="logo">
-                        <img src="./Visalogo.png" alt="Card Logo">
+                        <img src=".../Visalogo.png" alt="Card Logo">
                     </div>
                     <div class="card-number">
                         <p id="card-number-display">#### #### #### ####</p>
