--- a/carrito.html
+++ b/carrito.html
@@ -12,6 +12,16 @@
             <a href="index.html">
                 <h1>Ático Vintage</h1>
             </a>
+            <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="registro.html">Registro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="miscompras.html">Mis Compras</a></li>
+                <li><a href="carrito.html">Carrito</a></li>
+                <li><a href="chat.html">💬 Chat</a></li> <!-- Enlace al chat agregado aquí -->
+            </ul>
+        </nav>
         </div>
     </header>
     
