--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Encabezado con opciones de login y registro -->
     <header>
-        <div  class="logo" >
+        <div  class="logo">
             <img src="logoSB.png" alt="logo" width="200px" height="auto">
             <h1>Ático Vintage</h1>
         </div>
@@ -20,6 +20,7 @@
                 <li><a href="login.html">Login</a></li>
                 <li><a href="miscompras.html">Mis Compras</a></li>
                 <li><a href="carrito.html">Carrito</a></li>
+                <li><a href="chat.html">💬 Chat</a></li> <!-- Enlace al chat agregado aquí -->
             </ul>
         </nav>
     </header>
@@ -32,15 +33,15 @@
                 <img src="tipoPoloM.png" alt="Descripción de la prenda">
                 <h3>Camisa Para Hombre talla M</h3>
                 <p>Camisa Tipo Polo talla M para hombre</p>
-                <p>Color Azúl ,algodón 100%</p>
+                <p>Color Azul, algodón 100%</p>
                 <p>Precio: ¢1500</p>
                 <button>Comprar</button>
             </div>
             <div class="producto">
                 <img src="VestidoDama.png" alt="Descripción de la prenda">
                 <h3>Vestido para dama Verano 2021</h3>
-                <p>Vestido Floral para dama </p>
-                <p>1.54 cm de largo ,talla S </p>
+                <p>Vestido Floral para dama</p>
+                <p>1.54 cm de largo, talla S</p>
                 <p>Precio: ¢3600</p>
                 <button>Comprar</button>
             </div>
@@ -77,6 +78,9 @@
         <h2>Envío</h2>
         <p>Seguimiento del envío: <a href="rastreo.html">Rastrea tu pedido</a></p>
     </section>
+
+    <!-- Botón Flotante para el Chat -->
+    <a href="chat.html" class="chat-button">💬 Chat</a>
 
     <!-- Pie de página -->
     <footer>
