--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Camisa Tipo Polo talla M para hombre</p>
                 <p>Color Azul, algodón 100%</p>
                 <p>Precio: ¢1500</p>
-                <button>Comprar</button>
+                <button onclick="window.location.href='pagos.html'">Comprar</button>
             </div>
             <div class="producto">
                 <img src="VestidoDama.png" alt="Descripción de la prenda">
@@ -43,7 +43,8 @@
                 <p>Vestido Floral para dama</p>
                 <p>1.54 cm de largo, talla S</p>
                 <p>Precio: ¢3600</p>
-                <button>Comprar</button>
+                <button onclick="window.location.href='pagos.html'">Comprar</button>
+
             </div>
             <!-- Agrega más productos según sea necesario -->
         </section>
